@@ -1,0 +1,1 @@
+QUILT_PATCHES="debian/patches"
