@@ -16,6 +16,9 @@ glibc (2.3.6.ds1-10) UNRELEASED; urgency=low
     clone06 test).  Closes: #405411.
   * debian/patches/any/cvs-zdump-64-bit.diff: new patch from CVS to fix zdump
     on 64-bit architectures.  Closes: #402776.
+  * debian/quitlrc: new file.
+  * debian/rules.d/quilt.mk: use debian/quitlrc instead of default ~/.quiltrc.
+    Closes: #406136.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon,  8 Jan 2007 22:29:37 +0100
 
